fix: comments actions icon alignment

--- a/portal/src/scss/global.scss
+++ b/portal/src/scss/global.scss
@@ -165,8 +165,4 @@
         font-size: 15px;
         margin-right: 10px;
     }
-
-    * {
-        font-family: var(--font-family-bold);
-    }
 }
